--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body{
 }
 
 .tile-container .tile{
-    width: 65px;
+    width: 55px;
     height: 65px;
     border: 2px solid #3a3a3c;
     box-sizing: border-box;
@@ -214,3 +214,9 @@ p{
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+  }
